--- a/src/app/tela-mapa-horario-aulas/tela-mapa-horario-aulas.component.scss
+++ b/src/app/tela-mapa-horario-aulas/tela-mapa-horario-aulas.component.scss
@@ -6,6 +6,14 @@ body {
     padding: 20px;
   }
   
+  .page-title {
+    font-size: 24px;
+    font-weight: bold;
+    color: #ffeb3b; // Título em amarelo
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  
   .table-container {
     width: 100%;
     border-collapse: collapse;
