--- a/src/app/tela-mapa-horario-aulas/tela-mapa-horario-aulas.component.scss
+++ b/src/app/tela-mapa-horario-aulas/tela-mapa-horario-aulas.component.scss
@@ -7,6 +7,7 @@ body {
   }
   
   .page-title {
+    margin-top: 20px;
     font-size: 24px;
     font-weight: bold;
     color: #ffeb3b; // Título em amarelo
