fix: fluxo crud de salas

--- a/src/app/tela-salas/tela-salas-feitas/tela-salas-feitas.component.html
+++ b/src/app/tela-salas/tela-salas-feitas/tela-salas-feitas.component.html
@@ -41,6 +41,7 @@
                 [checked]="selectionReject.hasValue() && isAllRejectSelected()"
                 [indeterminate]="selectionReject.hasValue() && !isAllRejectSelected()"
                 >
+                Selecionar Excluir
               </mat-checkbox>
             </th>
             <td mat-cell *matCellDef="let row">
