--- a/src/app/tela-salas/tela-novas-salas/tela-novas-salas.component.html
+++ b/src/app/tela-salas/tela-novas-salas/tela-novas-salas.component.html
@@ -26,7 +26,7 @@
   </mat-toolbar>
 
   <mat-card>
-    <mat-card-title>Cadastro de Salas</mat-card-title>
+    <mat-card-title>{{roomToEdit.valid ? 'Edição': 'Cadastro'}} de Salas</mat-card-title>
     <mat-card-content>
       <form [formGroup]="resgiterForm" (ngSubmit)="save()">
         <mat-form-field *ngIf="courses.length > 0">
@@ -69,7 +69,7 @@
             <mat-label>Qte. de Projetores</mat-label>
           <input formControlName="projectors" matInput type="number" placeholder="Qte. de Projetores" name="projetor">
         </mat-form-field>
-        <button type="submit" class="saveButton">Cadastrar</button>
+        <button type="submit" class="saveButton">{{roomToEdit.valid ? 'Editar': 'Cadastrar'}}</button>
       </form>
     </mat-card-content>
 
