feat: criação de materias crud

--- a/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
+++ b/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
@@ -23,6 +23,14 @@
       <mat-icon>meeting_room</mat-icon>
       <span>Reservas</span>
     </button>
+    <button (click)="redirectSalas()" mat-menu-item>
+      <mat-icon>meeting_room</mat-icon>
+      <span>Salas</span>
+    </button>
+    <button (click)="redirectMaterias()" mat-menu-item>
+      <mat-icon>meeting_room</mat-icon>
+      <span>Materias</span>
+    </button>
   </mat-menu>
 
   <span class="tituloH">HEIMDALL</span>
