--- a/src/app/tela-mapa-horario-aulas/tela-mapa-horario-aulas.component.html
+++ b/src/app/tela-mapa-horario-aulas/tela-mapa-horario-aulas.component.html
@@ -12,7 +12,12 @@
       <span>Reservas</span>
     </button>
   </mat-menu>
-  <div class="page-title">
+
+  <span class="tituloH">HEIMDALL</span>
+</mat-toolbar>
+
+
+<div class="page-title">
   Horário/Mapa de Aulas
 </div>
 <table class="table-container">
