--- a/src/app/tela-mapa-horario-aulas/tela-mapa-horario-aulas.component.scss
+++ b/src/app/tela-mapa-horario-aulas/tela-mapa-horario-aulas.component.scss
@@ -91,3 +91,8 @@ body {
     }
   }
   
+  .mat-toolbar {
+    background: #e6b60ade;
+    color: var(--mat-toolbar-container-text-color);
+    border-bottom: 2px solid black;
+  }
