--- a/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
+++ b/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
@@ -15,20 +15,16 @@
       <mat-icon>how_to_reg</mat-icon>
       <span>Cadastrar Alunos</span>
     </button>
-    <button mat-menu-item disabled>
-      <mat-icon>school</mat-icon>
-      <span>Cadastrar Salas</span>
-    </button>
     <button (click)="redirectReserve()" mat-menu-item>
-      <mat-icon>meeting_room</mat-icon>
+      <mat-icon>schedule</mat-icon>
       <span>Reservas</span>
     </button>
     <button (click)="redirectSalas()" mat-menu-item>
-      <mat-icon>meeting_room</mat-icon>
+      <mat-icon>room</mat-icon>
       <span>Salas</span>
     </button>
     <button (click)="redirectMaterias()" mat-menu-item>
-      <mat-icon>meeting_room</mat-icon>
+      <mat-icon>library_books</mat-icon>
       <span>Materias</span>
     </button>
   </mat-menu>
