--- a/src/app/tela-materias/tela-materias-feitas/tela-materias-feitas.component.html
+++ b/src/app/tela-materias/tela-materias-feitas/tela-materias-feitas.component.html
@@ -21,7 +21,7 @@
       </button>
     </mat-menu>
   
-    <span class="tituloH">HEIMDALL</span>
+    <span class="tituloH" (click)="redirectHomeAdm()">HEIMDALL</span>
   
   </mat-toolbar>
 
