--- a/src/app/tela-materias/tela-novas-materias/tela-novas-materias.component.scss
+++ b/src/app/tela-materias/tela-novas-materias/tela-novas-materias.component.scss
@@ -59,6 +59,7 @@
   .tituloH {
     font-size: 2em;
     font-family: Copperplate, Copperplate Gothic Light, fantasy;
+    cursor: pointer;
   }
   
   mat-card{
