--- a/src/app/tela-solicitacoes-registro/tela-solicitacoes-registro.component.html
+++ b/src/app/tela-solicitacoes-registro/tela-solicitacoes-registro.component.html
@@ -8,7 +8,7 @@
       <span>Perfil</span>
     </button>
   </mat-menu>
-  <span class="tituloH">HEIMDALL</span>
+  <span class="tituloH" (click)="redirectHomeAdm()">HEIMDALL</span>
 </mat-toolbar>
 
 <div class="container-table">
