--- a/src/app/tela-materias/tela-novas-materias/tela-novas-materias.component.html
+++ b/src/app/tela-materias/tela-novas-materias/tela-novas-materias.component.html
@@ -21,7 +21,7 @@
       </button>
     </mat-menu>
   
-    <span class="tituloH">HEIMDALL</span>
+    <span class="tituloH" (click)="redirectHomeAdm()">HEIMDALL</span>
   
   </mat-toolbar>
 
