--- a/src/app/tela-salas/tela-salas-feitas/tela-salas-feitas.component.scss
+++ b/src/app/tela-salas/tela-salas-feitas/tela-salas-feitas.component.scss
@@ -19,6 +19,7 @@
   .tituloH {
     font-size: 2em;
     font-family: Copperplate, Copperplate Gothic Light, fantasy;
+    cursor: pointer;
   }
   
   .table-container {
