--- a/src/app/tela-solicitacoes-registro/tela-solicitacoes-registro.component.scss
+++ b/src/app/tela-solicitacoes-registro/tela-solicitacoes-registro.component.scss
@@ -20,16 +20,13 @@
 
 table {
     width: 100%;
-    background-color: #ffd740de;
 }
 
-mat-paginator {
-  background-color: #ffd740de;
-}
 
 .tituloH {
     font-family: Copperplate, Copperplate Gothic Light, fantasy;
     font-size: 2em;
+    cursor: pointer;
 }
 
 .mat-mdc-form-field {
