--- a/src/app/tela-see-more/tela-see-more.component.html
+++ b/src/app/tela-see-more/tela-see-more.component.html
@@ -59,12 +59,12 @@
   
       <ng-container matColumnDef="registrationNumber">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> MATRÍCULA </th>
-        <td class="registrationNumber" mat-cell *matCellDef="let row"> {{ row.registrationNumber }} </td>
+        <td class="registrationNumber" mat-cell *matCellDef="let row"> {{ row.registration_number }} </td>
       </ng-container>
       
       <ng-container matColumnDef="nome">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> NOME </th>
-        <td class="nome" mat-cell *matCellDef="let row"> {{ row.nome }} </td>
+        <td class="nome" mat-cell *matCellDef="let row"> {{ row.name }} </td>
       </ng-container>
   
       <ng-container matColumnDef="email">
