fix cursor pointer heidall

--- a/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
+++ b/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
@@ -29,7 +29,7 @@
     </button>
   </mat-menu>
 
-  <span class="tituloH" (click)="redirectHomeAdm()">HEIMDALL</span>
+  <span class="tituloH" (click)="redirectHomeAdm()" style="cursor: pointer;">HEIMDALL</span>
 </mat-toolbar>
 <div *ngFor="let block of data">
   <div class="header">
