--- a/src/app/tela-reservas/tela-reservas-feitas/tela-reservas-feitas.component.html
+++ b/src/app/tela-reservas/tela-reservas-feitas/tela-reservas-feitas.component.html
@@ -17,7 +17,8 @@
     </button>
   </mat-menu>
 
-  <span class="tituloH">HEIMDALL</span>
+  <span class="tituloH" (click)="redirectHomeAdm()" style="cursor: pointer;">HEIMDALL</span>
+
 
 </mat-toolbar>
 
