--- a/src/app/tela-reservas/tela-novas-reservas/tela-novas-reservas.component.html
+++ b/src/app/tela-reservas/tela-novas-reservas/tela-novas-reservas.component.html
@@ -17,7 +17,7 @@
     </button>
   </mat-menu>
 
-  <span class="tituloH">HEIMDALL</span>
+  <span class="tituloH" (click)="redirectHomeAdm()" style="cursor: pointer;">HEIMDALL</span>
 
 </mat-toolbar>
 
