--- a/src/app/tela-reservas/tela-reservas-feitas/tela-reservas-feitas.component.html
+++ b/src/app/tela-reservas/tela-reservas-feitas/tela-reservas-feitas.component.html
@@ -57,6 +57,23 @@
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex: SOPA2" #input>
   </mat-form-field>
   <table mat-table [dataSource]="dataSource" matSort>
+
+    <ng-container matColumnDef="remove">
+      <th mat-header-cell *matHeaderCellDef>
+            <mat-checkbox (change)="$event ? toggleAllRowsReject() : null"
+            [checked]="selectionReject.hasValue() && isAllRejectSelected()"
+            [indeterminate]="selectionReject.hasValue() && !isAllRejectSelected()"
+            >
+            Selecionar Excluir
+          </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-checkbox (click)="$event.stopPropagation()"
+          (change)="$event ? selectionReject.toggle(row) : null"
+          [checked]="selectionReject.isSelected(row)"
+          ></mat-checkbox>
+        </td>
+      </ng-container>
     
     <!-- Checkbox Column -->
     <ng-container matColumnDef="numero">
@@ -87,13 +104,9 @@
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
 </div> 
 
-<div *ngIf="reserveList.length > 0" class="demo-button-container">
-  <button mat-raised-button (click)="addData()" class="demo-button">
-    FAZER NOVAS RESERVAS
-  </button>
+<div *ngIf="selectionReject.selected.length > 0" class="demo-button-container">
   <button
       mat-raised-button
-      [disabled]="!salas.length"
       (click)="removeData()"
       class="demo-button">
     DELETAR RESERVAS
