--- a/src/app/tela-reservas/tela-reservas.component.html
+++ b/src/app/tela-reservas/tela-reservas.component.html
@@ -3,10 +3,8 @@
     <h1 style="color: yellow;margin: 0.5cm;">Escolha alguma das opções abaixo:</h1>
     <button mat-raised-button (click)="addData()" class="demo-button">FAZER NOVAS RESERVAS</button>
     <br>
-    <button mat-raised-button (click)="removeData()" class="demo-button">DELETAR RESERVAS</button>
-    <br>
     <button mat-raised-button (click)="seeData()" class="demo-button">VER RESERVAS</button>
-    <br>
-    <button mat-raised-button (click)="permissionData()" class="demo-button">PERMISSÃO DE RESERVAS</button>
+    <!-- <br>
+    <button mat-raised-button (click)="permissionData()" class="demo-button">PERMISSÃO DE RESERVAS</button> -->
   </div>
 </div>
