--- a/src/app/tela-materias/tela-materias-feitas/tela-materias-feitas.component.scss
+++ b/src/app/tela-materias/tela-materias-feitas/tela-materias-feitas.component.scss
@@ -4,7 +4,7 @@
   
   .mat-toolbar {
     background: #000000;
-    color: yellow;
+    color: #1ddd04;
   }
   
   .logo-central {
@@ -31,7 +31,7 @@
   }
   
   mat-table{
-    background-color: #ffd740de;
+    background-color: #83cf79;
     width: 100%;
   }
   
