--- a/src/app/tela-materias/tela-materias.component.scss
+++ b/src/app/tela-materias/tela-materias.component.scss
@@ -1,5 +1,5 @@
 .demo-button {
-  background: rgb(245, 245, 101);
+  background: #83cf79;
   margin: 1cm;
 }
 
@@ -9,7 +9,7 @@
   align-items: center;
   text-align: center;
   background-color: rgb(0, 0, 0);
-  border: 3px solid yellow;
+  border: 3px solid #1ddd04;
 }
 
 .reservas-button{
