--- a/src/app/tela-reservas/tela-reservas-feitas/tela-reservas-feitas.component.scss
+++ b/src/app/tela-reservas/tela-reservas-feitas/tela-reservas-feitas.component.scss
@@ -4,7 +4,7 @@
 
 .mat-toolbar {
   background: rgb(20, 20, 20);
-  color: yellow;
+  color: #1ddd04;
 }
 
 .logo-central {
@@ -30,7 +30,7 @@
 }
 
 mat-table{
-  background-color: #ffd740de;
+  background-color: #83cf79;
   width:100%;
 }
 
