--- a/src/app/tela-solicitacoes-registro/tela-solicitacoes-registro.component.scss
+++ b/src/app/tela-solicitacoes-registro/tela-solicitacoes-registro.component.scss
@@ -1,11 +1,11 @@
 .mat-toolbar {
     background: #000000;
-    color: yellow;
+    color: #1ddd04;
     border-bottom: 2px solid black;
   }
   
   .header {
-    background: #ffc802de;
+    background: #1ddd04;
     display: flex;
     padding: 1% 0 0 10%;
 }
