--- a/src/app/role-adm/tela-home-adm/tela-home-adm.component.scss
+++ b/src/app/role-adm/tela-home-adm/tela-home-adm.component.scss
@@ -1,11 +1,11 @@
 .mat-toolbar {
   background: #000000;
-  color: yellow;
+  color: #1eff00;
   margin-bottom: 0.5%;
 }
 
 .header {
-  background: #ffc802de;
+  background: #1eff00;
   display: flex;
   padding: 1% 0 0 10%;
 }
@@ -38,10 +38,10 @@ mat-card {
   color: black;
   border: solid 2px black;
   mat-card-header {
-    background-color: rgba(241, 213, 109, 0.959);
+    background-color: #83cf79;
   }
   button {
-    background: #e6b60ade;
+    background: #1ddd04;
     color: black;
   }
 }
@@ -51,13 +51,13 @@ mat-card {
   color: black;
 
   mat-card-header {
-    background-color: rgba(255, 200, 2, 0.8705882353);
+    background-color: #83cf79;
     mat-card-title {
       color: black;
     }
   }
   button {
-    background: #e6b60ade;
+    background: #1ddd04;
     color: black;
   }
 }
@@ -65,7 +65,7 @@ mat-card {
 mat-card-header {
   margin-bottom: 2%;
   height: 60%;
-  background: #ff9700;
+  background: #83cf79;
 }
 
 mat-card-title {
