--- a/src/app/tela-inicial/tela-inicial.component.scss
+++ b/src/app/tela-inicial/tela-inicial.component.scss
@@ -1,79 +1,94 @@
 .mat-toolbar {
   background: rgb(20, 20, 20);
-  color: yellow;
+  color: #1ddd04;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+
+li {
+  color: #a9c5a5;
+  font-size: 1.2em;
+  margin: 0 auto;
+  width: 80%;
 }
 
 .box-container {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 10%;
-  background-color: rgb(20, 20, 20); /* Cor de fundo do container definida como preto */
+  margin: 5% 0; /* Aplicar margem superior e inferior apenas */
+  background-color: rgb(20, 20, 20);
+  width: 100%; /* Ajustar a largura para 100% */
+}
 
-  .logo-central {
-    z-index: 999;
-    width: 225px;
-    height: 225px;
-    margin-right: 5%;
-    background-image: url(../../assets/images/heimdall.logo.png);
-  }
+.logo-central {
+  z-index: 999;
+  width: 225px;
+  height: 225px;
+  margin-right: 5%;
+  background-image: url(../../assets/images/heimdall.logo.png);
+  background-size: cover;
+}
 
-  .tryNow {
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(20, 20, 20); /* Use preto para fundo transparente */
-    padding: 5%;
-    border-radius: 10px;
-    z-index: 999;
-    justify-content: center;
-    width: 20%;
+.tryNow {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(20, 20, 20);
+  padding: 5%;
+  border-radius: 10px;
+  z-index: 999;
+  justify-content: center;
+  width: 50%; /* Ajustar a largura para centralizar */
+}
 
-    p {
-      font-size: 1.2em;
-      width: 80%;
-      margin: 0 0 8% 15%;
-      font-weight: 700;
-      color: yellow; /* Cor do texto amarela */
-    }
+.tryNow p {
+  font-size: 1.2em;
+  width: 80%;
+  margin: 1.2em auto;
+  color: #a9c5a5;
+}
 
-    button {
-      background-color: #ffff00; /* Cor de fundo do botão amarela */
-      color: rgb(0, 0, 0); /* Cor do texto do botão preta */
-      font-weight: 900 !important;
-      font-family: sans-serif !important;
-      font-size: 1.2em !important;
-    }
-  }
+.tryNow button {
+  background-color: #1ddd04;
+  color: rgb(0, 0, 0);
+  font-weight: 900 !important;
+  font-family: sans-serif !important;
+  font-size: 1.2em !important;
+  margin-top: 1em; /* Espaçamento adicional para o botão */
 }
 
 .tituloH {
   font-size: 2em;
   font-family: Copperplate, Copperplate Gothic Light, fantasy;
-  color: yellow; /* Cor do texto do título amarela */
+  color: #1ddd04;
+  margin-left: 20px; /* Espaçamento à esquerda para o título */
 }
-
 
 @media (max-width: 768px) {
-  .tituloH{
-    font-size: 1.5em;
+  .tituloH {
+      font-size: 1.5em;
   }
+
   .box-container {
-    flex-direction: column;
-    margin-top: 30%;
-    padding: 5%;
-    .logo-central {
+      flex-direction: column;
+      margin: 15% 0; /* Aplicar margem superior e inferior apenas */
+      padding: 5%;
+      width: 100%; /* Ajustar a largura para 100% */
+  }
+
+  .logo-central {
       margin-right: 0;
       margin-bottom: 5%;
-    }
-    .tryNow {
+  }
+
+  .tryNow {
       width: 100%;
       padding: 10%;
-      p {
-        font-size: 1.5em;
-        align-self: center;
-      }
-    }
+  }
+
+  .tryNow p {
+      font-size: 1.5em;
+      align-self: center;
   }
 }
-
-
