--- a/src/app/tela-materias/tela-materias.component.html
+++ b/src/app/tela-materias/tela-materias.component.html
@@ -1,6 +1,6 @@
 <div class="button-container">
     <div class="reservas-button">
-      <h1 style="color: yellow;margin: 0.5cm;">Escolha alguma das opções abaixo:</h1>
+      <h1 style="color: #1ddd04;margin: 0.5cm;">Escolha alguma das opções abaixo:</h1>
       <button mat-raised-button (click)="addData()" class="demo-button">CRIAR NOVAS MATÉRIAS</button>
       <br>
       <button mat-raised-button (click)="seeData()" class="demo-button">VER MATERIAS</button>
