--- a/src/app/tela-perfil/tela-perfil.component.scss
+++ b/src/app/tela-perfil/tela-perfil.component.scss
@@ -1,5 +1,5 @@
 .mat-toolbar {
-  background: #ffd740de;
+  background: #1ddd04;
   color: var(--mat-toolbar-container-text-color);
   border-bottom: 2px solid black;
 }
@@ -40,5 +40,5 @@
 }
 
 ::ng-deep .mat-mdc-dialog-surface {
-  background: rgba(255, 215, 64, 1) !important;
+  background: #83cf79 !important;
 }
