--- a/src/app/tela-reservas/tela-permissao-reservas/tela-permissao-reservas.component.scss
+++ b/src/app/tela-reservas/tela-permissao-reservas/tela-permissao-reservas.component.scss
@@ -4,7 +4,7 @@
   
   .mat-toolbar {
     background: rgb(20, 20, 20);
-    color: yellow;
+    color: #1ddd04;
     margin-bottom: 1cm;
   }
   
@@ -45,7 +45,7 @@
 }
 
 mat-table{
-  background-color: #ffd740de;
+  background-color: #83cf79;
 }
 
 .mat-mdc-form-field {
