--- a/src/app/tela-salas/tela-novas-salas/tela-novas-salas.component.scss
+++ b/src/app/tela-salas/tela-novas-salas/tela-novas-salas.component.scss
@@ -13,7 +13,7 @@
   
   .mat-toolbar {
     background: rgb(20, 20, 20);
-    color: yellow;
+    color: #1ddd04;
     margin-bottom: 1cm;
   }
   
@@ -64,7 +64,7 @@
   
   mat-card{
     background-color: rgb(20, 20, 20);
-    border: 3px solid yellow;
+    border: 3px solid #1ddd04;
     width: 50%;
     margin: auto;
     padding: 1cm;
@@ -77,7 +77,7 @@
   mat-card-title{
     margin-bottom: 1cm;
     text-align: center;
-    color: yellow;
+    color: #1ddd04;
   }
 
   .saveButton{
@@ -89,7 +89,7 @@
     padding-bottom: 20px;
     padding-top: 20px;
     margin-right: 1cm;
-    background-color: yellow;
+    background-color: #1ddd04;
     color: black;
     cursor: pointer;
     float: right;
@@ -115,7 +115,7 @@
   
     mat-card {
       width: 100%; /* Tornar o card com largura total em mobile */
-      border: 10% solid yellow;
+      border: 10% solid #1ddd04;
       padding: 20px; /* Ajustar preenchimento para melhor layout em mobile */
     }
   
