--- a/src/app/tela-see-more/tela-see-more.component.scss
+++ b/src/app/tela-see-more/tela-see-more.component.scss
@@ -1,11 +1,11 @@
 .mat-toolbar {
     background: #000000;
-    color: yellow;
+    color: #1ddd04;
     border-bottom: 2px solid black;
   }
   
   .header {
-    background: #ffc802de;
+    background: #1ddd04;
     display: flex;
     padding: 1% 0 0 10%;
 }
@@ -20,11 +20,11 @@
 
 table {
     width: 100%;
-    background-color: #ffd740de;
+    background-color: #83cf79;
 }
 
 mat-paginator {
-  background-color: #ffd740de;
+  background-color: #83cf79;
 }
 
 .tituloH {
