fix: tela horarios funcionando

--- a/src/app/tela-mapa-horario-aulas/tela-mapa-horario-aulas.component.html
+++ b/src/app/tela-mapa-horario-aulas/tela-mapa-horario-aulas.component.html
@@ -13,7 +13,7 @@
     </button>
   </mat-menu>
 
-  <span class="tituloH">HEIMDALL</span>
+  <span class="tituloH" style="cursor: pointer;" (click)="redirectHomeAdm()" >HEIMDALL</span>
 </mat-toolbar>
 
 <div class="page-title">
