--- a/src/app/tela-see-more/tela-see-more.component.html
+++ b/src/app/tela-see-more/tela-see-more.component.html
@@ -1,15 +1,32 @@
 <mat-toolbar>
-    <button mat-icon-button [matMenuTriggerFor]="menu">
-      <mat-icon>menu</mat-icon>
+  <!-- Botão para voltar para a página anterior -->
+  <button mat-icon-button (click)="goBack()">
+    <mat-icon>arrow_back</mat-icon>
+  </button>
+
+  <!-- Botão do menu existente -->
+  <button mat-icon-button [matMenuTriggerFor]="menu">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <mat-menu #menu="matMenu">
+    <button (click)="redirectProfile()" mat-menu-item>
+      <mat-icon>account_circle</mat-icon>
+      <span>Perfil</span>
     </button>
-    <mat-menu #menu="matMenu">
-      <button (click)="redirectProfile()" mat-menu-item>
-        <mat-icon> account_circle </mat-icon>
-        <span>Perfil</span>
-      </button>
-    </mat-menu>
-    <span class="tituloH">HEIMDALL</span>
-  </mat-toolbar>
+  </mat-menu>
+
+  <!-- Título -->
+  <span class="tituloH">HEIMDALL</span>
+
+  <!-- Espaço flexível para empurrar o botão de logout para a direita -->
+  <span class="spacer"></span>
+
+  <!-- Botão de logout -->
+  <button mat-icon-button (click)="logout()">
+    <mat-icon>logout</mat-icon>
+  </button>
+</mat-toolbar>
+
   
   <div class="container-table">
     
