--- a/src/app/tela-materias/tela-materias-feitas/tela-materias-feitas.component.html
+++ b/src/app/tela-materias/tela-materias-feitas/tela-materias-feitas.component.html
@@ -1,29 +1,31 @@
 <mat-toolbar>
-    <button mat-icon-button [matMenuTriggerFor]="menu">
-      <mat-icon>menu</mat-icon>
+  <!-- Botão para voltar para a página anterior -->
+  <button mat-icon-button (click)="goBack()">
+    <mat-icon>home</mat-icon>
+  </button>
+
+  <!-- Botão do menu existente -->
+  <button mat-icon-button [matMenuTriggerFor]="menu">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <mat-menu #menu="matMenu">
+    <button (click)="redirectProfile()" mat-menu-item>
+      <mat-icon>account_circle</mat-icon>
+      <span>Perfil</span>
     </button>
-    <mat-menu #menu="matMenu">
-      <button (click)="redirectProfile()" mat-menu-item>
-        <mat-icon> account_circle </mat-icon>
-        <span>Perfil</span>
-      </button>
-      <button (click)="openSalas()" mat-menu-item>
-        <mat-icon>room</mat-icon>
-        <span>Salas</span>
-      </button>
-      <button (click)="openMaterias()" mat-menu-item>
-        <mat-icon>library_books</mat-icon>
-        <span>Matérias</span>
-      </button>
-      <button (click)="openReservas()" mat-menu-item>
-        <mat-icon>schedule</mat-icon>
-        <span>Reservas</span>
-      </button>
-    </mat-menu>
-  
-    <span class="tituloH" (click)="redirectHomeAdm()" style="cursor: pointer;">HEIMDALL</span>
-  
-  </mat-toolbar>
+  </mat-menu>
+
+  <!-- Título -->
+  <span class="tituloH">HEIMDALL</span>
+
+  <!-- Espaço flexível para empurrar o botão de logout para a direita -->
+  <span class="spacer"></span>
+
+  <!-- Botão de logout -->
+  <button mat-icon-button (click)="logout()">
+    <mat-icon>logout</mat-icon>
+  </button>
+</mat-toolbar>
 
   <div class="table-container">
     <mat-form-field>
