--- a/src/app/tela-reservas/tela-novas-reservas/tela-novas-reservas.component.html
+++ b/src/app/tela-reservas/tela-novas-reservas/tela-novas-reservas.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
   <!-- Botão para voltar para a página anterior -->
   <button mat-icon-button (click)="goBack()">
-    <mat-icon>arrow_back</mat-icon>
+    <mat-icon>home</mat-icon>
   </button>
 
   <!-- Botão do menu existente -->
