--- a/src/app/tela-reservas/tela-permissao-reservas/tela-permissao-reservas.component.html
+++ b/src/app/tela-reservas/tela-permissao-reservas/tela-permissao-reservas.component.html
@@ -1,28 +1,30 @@
 <mat-toolbar>
+  <!-- Botão para voltar para a página anterior -->
+  <button mat-icon-button (click)="goBack()">
+    <mat-icon>home</mat-icon>
+  </button>
+
+  <!-- Botão do menu existente -->
   <button mat-icon-button [matMenuTriggerFor]="menu">
     <mat-icon>menu</mat-icon>
   </button>
   <mat-menu #menu="matMenu">
-    <button (click)="openLoginSignUp()" mat-menu-item>
-      <mat-icon>dialpad</mat-icon>
-      <span>Cadastro/Login</span>
-    </button>
-    <button mat-menu-item disabled>
-      <mat-icon>voicemail</mat-icon>
-      <span>Mapa do Site</span>
-    </button>
-    <button (click)="openSalas()" mat-menu-item>
-      <mat-icon>meeting_room</mat-icon>
-      <span>Salas</span>
-    </button>
-    <button (click)="openReservas()" mat-menu-item>
-      <mat-icon>event</mat-icon>
-      <span>Reservas</span>
+    <button (click)="redirectProfile()" mat-menu-item>
+      <mat-icon>account_circle</mat-icon>
+      <span>Perfil</span>
     </button>
   </mat-menu>
 
+  <!-- Título -->
   <span class="tituloH">HEIMDALL</span>
 
+  <!-- Espaço flexível para empurrar o botão de logout para a direita -->
+  <span class="spacer"></span>
+
+  <!-- Botão de logout -->
+  <button mat-icon-button (click)="logout()">
+    <mat-icon>logout</mat-icon>
+  </button>
 </mat-toolbar>
 
 <div class="table-container">
