--- a/src/app/role-teacher/tela-home-teacher/tela-home-teacher.component.html
+++ b/src/app/role-teacher/tela-home-teacher/tela-home-teacher.component.html
@@ -13,7 +13,17 @@
     </button>
   </mat-menu>
 
+  <!-- Título -->
   <span class="tituloH">HEIMDALL</span>
+
+  <!-- Espaço flexível para empurrar o botão de logout para a direita -->
+  <span class="spacer"></span>
+
+  <!-- Botão de logout -->
+  <button mat-icon-button (click)="logout()">
+    <mat-icon>logout</mat-icon>
+  </button>
+
 </mat-toolbar>
 <div>
   <div class="header">
