tela inicial, feita

--- a/src/app/animacao/animacao.component.html
+++ b/src/app/animacao/animacao.component.html
@@ -7,13 +7,13 @@
   />
   <div style="display: flex; align-items: center">
     <img
-      src="assets/images/logo.png"
+      src="assets/images/ifsp.logo.png"
       class="logo"
       [ngClass]="{ 'animate-logo': showLogo }"
       *ngIf="showLogo"
     />
     <img
-      src="assets/images/nome.png"
+      src="assets/images/ifsp.nome.png"
       class="nome"
       [ngClass]="{ 'animate-nome': showNome }"
       *ngIf="showNome"
